Test base href on index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8">
+  <base href="/financial-pulse/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Financial Pulse — Markets, Options, Insights</title>
 
