--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8">
-  <base href="/financial-pulse/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Financial Pulse — Markets, Options, Insights</title>
 
@@ -64,7 +63,7 @@
   </script>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="css/global.css" />
 </head>
 <body>
   <header class="site-header">
