Fix: remove leading slashes from asset paths

--- a/index.html
+++ b/index.html
@@ -132,20 +132,20 @@
     <!-- LEARN OPTIONS -->
     <section id="learn" class="section alt">
       <div class="grid cards">
-        <a class="card" href="/options/trading-options.html">
+        <a class="card" href="options/trading-options.html">
           <h3>Options Overview</h3>
           <p>Start here: a structured path for beginners.</p>
           <span class="pill">Start</span>
         </a>
-        <a class="card" href="/options/call-and-put-option-basics/type-of-options.html">
+        <a class="card" href="options/call-and-put-option-basics/type-of-options.html">
           <h3>Call & Put Basics</h3>
           <p>What options are and how they behave.</p>
         </a>
-        <a class="card" href="/options/basic-terms/greeks.html">
+        <a class="card" href="options/basic-terms/greeks.html">
           <h3>Greeks</h3>
           <p>Important basic terms to understand, strike, ATM, ITM and more.</p>
         </a>
-        <a class="card" href="/options/option-strategies/covered-call.html">
+        <a class="card" href="options/option-strategies/covered-call.html">
           <h3>Strategies</h3>
           <p>Start with Covered calls and then much more.</p>
         </a>
@@ -177,7 +177,7 @@
           <p>On <a id="substackLink" target="_blank" rel="noopener">Substack</a> you’ll find my latest market notes; on <a id="xLink2" target="_blank" rel="noopener">X</a> I share quick takes and charts.</p>
         </div>
         <div class="about-media">
-          <img src="/assets/img/me.png" alt="Photo of the author" />
+          <img src="assets/img/me.png" alt="Photo of the author" />
         </div>
       </div>
     </section>
@@ -217,9 +217,9 @@
       <div class="socials">
         <a id="xLink3" class="social" aria-label="X profile" target="_blank" rel="noopener">X</a>
         <a id="substackLink2" class="social" aria-label="Substack" target="_blank" rel="noopener">Substack</a>
-        <a href="/disclaimer.html" class="social">Disclaimer</a>
-        <a href="/legal/terms.html" class="social">Terms</a>
-        <a href="/legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+        <a href="disclaimer.html" class="social">Disclaimer</a>
+        <a href="legal/terms.html" class="social">Terms</a>
+        <a href="legal/privacy.html" class="social">Privacy &amp; Cookies</a>
         <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
       </div>
     </div>
@@ -237,7 +237,7 @@
   </script>
 
   <!-- Glavni skript (ESM je defer po defaultu) -->
-  <script src="/js/app.js" type="module"></script>
+  <script src="js/app.js" type="module"></script>
 
   <!-- ===== Disclaimer modal (HTML) ===== -->
   <div id="disclaimerModal" class="disclaimer-backdrop" role="dialog"
@@ -298,7 +298,7 @@
   <script>
     window.fpCookiesConfig = { policyUrl: 'legal/privacy.html', ttlDays: 180 };
   </script>
-  <script src="/js/cookies.js"></script>
+  <script src="js/cookies.js"></script>
 </body>
 </html>
 
