--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <p>On <a id="substackLink" target="_blank" rel="noopener">Substack</a> you’ll find my latest market notes; on <a id="xLink2" target="_blank" rel="noopener">X</a> I share quick takes and charts.</p>
         </div>
         <div class="about-media">
-          <img src="assets/img/me.png" alt="Photo of the author" />
+          <img src="../assets/img/me.png" alt="Photo of the author" />
         </div>
       </div>
     </section>
