Update all HTML files to use relative asset paths

--- a/legal/privacy.html
+++ b/legal/privacy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Financial Pulse — Privacy & Cookies</title>
   <meta name="robots" content="noindex" />
-  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="css/global.css" />
   <style>
     .page{max-width:860px;margin:0 auto;padding:48px 20px}
     .page h1,.page h2{margin:0 0 16px}
@@ -139,7 +139,7 @@
     <p>Kolačiće koristimo za funkcioniranje stranice i, uz vašu privolu, za analitiku. Nenužni kolačići koriste se tek nakon privole. Odluku možete promijeniti u svakom trenutku putem “Upravljanje kolačićima”.</p>
   </section>
 
-  <a class="back" href="/index.html" aria-label="Back to Financial Pulse">← Back to Financial Pulse</a>
+  <a class="back" href="index.html" aria-label="Back to Financial Pulse">← Back to Financial Pulse</a>
 </div>
 
 <script>
@@ -155,9 +155,9 @@
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="/disclaimer.html" class="social">Disclaimer</a>
-      <a href="/legal/terms.html" class="social">Terms</a>
-      <a href="/legal/privacy.html" class="social" aria-current="page">Privacy &amp; Cookies</a>
+      <a href="disclaimer.html" class="social">Disclaimer</a>
+      <a href="legal/terms.html" class="social">Terms</a>
+      <a href="legal/privacy.html" class="social" aria-current="page">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
@@ -175,7 +175,7 @@
   })();
 </script>
 
-<script src="/js/cookies.js"></script>
+<script src="js/cookies.js"></script>
 </body>
 </html>
 
