--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Financial Pulse — Disclaimer</title>
   <meta name="robots" content="noindex" />
-  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="css/global.css" />
   <style>
     .page{max-width:860px;margin:0 auto;padding:48px 20px}
     .page h1{margin:0 0 16px}
@@ -60,16 +60,16 @@
       <p><strong>Dob.</strong> Sadržaj je namijenjen osobama starijim od 18 godina.</p>
     </section>
 
-    <a class="back" href="/index.html">← Back to Financial Pulse</a>
+    <a class="back" href="index.html">← Back to Financial Pulse</a>
   </div>
 
   <footer class="site-footer">
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="/disclaimer.html" class="social">Disclaimer</a>
-      <a href="/legal/terms.html" class="social">Terms</a>
-      <a href="/legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="disclaimer.html" class="social">Disclaimer</a>
+      <a href="legal/terms.html" class="social">Terms</a>
+      <a href="legal/privacy.html" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
@@ -87,7 +87,7 @@
   })();
 </script>
 
-<script src="/js/cookies.js"></script>
+<script src="js/cookies.js"></script>
 
 </body>
 </html>
