--- a/intro.html
+++ b/intro.html
@@ -2,7 +2,7 @@
 <html lang="hr">
 <head>
   <meta name="robots" content="noindex,follow">
-  <link rel="canonical" href="/index.html">
+  <link rel="canonical" href="index.html">
   <noscript><meta http-equiv="refresh" content="0;url=/index.html"></noscript>
 
 
