--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Financial Pulse — Disclaimer</title>
   <meta name="robots" content="noindex" />
-  <link rel="stylesheet" href="css/global.css" />
+  <link rel="stylesheet" href="css/global.css?v=20250815-1">
   <style>
     .page{max-width:860px;margin:0 auto;padding:48px 20px}
     .page h1{margin:0 0 16px}
