Fix terms page asset paths (css/js) and footer links

--- a/legal/terms.html
+++ b/legal/terms.html
@@ -86,7 +86,7 @@
     <p>Uvjete možemo povremeno ažurirati. Nastavkom korištenja stranice nakon izmjena prihvaćate nove Uvjete.</p>
   </section>
 
-  <a class="back" href="../index.html">← Back to Financial Pulse</a>
+  <a class="back" href="index.html">← Back to Financial Pulse</a>
 </div>
 
 <footer class="site-footer">
