Fix cookies.js include path (ensure loaded on all pages)

--- a/legal/terms.html
+++ b/legal/terms.html
@@ -112,7 +112,9 @@
     }
   })();
 </script>
-<script src="../js/cookies.js"></script>
+<script>window.fpCookiesConfig = { ttlDays: 180, policyUrl: 'legal/privacy.html' };</script>
+<script src="../js/cookies.js?v=20250815-2"></script>
+
 </body>
 </html>
 
