Fix: update relative path in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a href="#learn">Learn</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
-        <a href="options/trading-options.html" class="nav-options">Options</a>
+        <a href="options/trading-options.html?v=20250819-1" class="nav-options">Options</a>
         <a class="btn-outline" id="xLink" target="_blank" rel="noopener noreferrer">Follow on X</a>
         <button class="mode-toggle" id="modeToggle" aria-label="Toggle dark mode">🌓</button>
       </nav>
