Fix: update relative paths in trading-options.html

--- a/options/trading-options.html
+++ b/options/trading-options.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Options Made Simple</title>
-    <link rel="stylesheet" href="/css/options.css">
+    <link rel="stylesheet" href="css/options.css">
   <script>
     if (localStorage.getItem('darkMode') === 'true') {
       document.documentElement.classList.add('dark');
@@ -42,7 +42,7 @@
 <body>
 
   <div class="nav-bar">
-    <a href="/index.html" class="nav-button">Homepage</a>
+    <a href="index.html" class="nav-button">Homepage</a>
   </div>
 
   <!-- Dark/Light Mode Toggle Button -->
@@ -106,16 +106,16 @@
     </section>
   </div>
 
-  <script src="/js/darkmode.js"></script>
+  <script src="js/darkmode.js"></script>
   
 
  <footer class="site-footer">
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="/disclaimer.html" class="social">Disclaimer</a>
-      <a href="/legal/terms.html" class="social">Terms</a>
-      <a href="/legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="disclaimer.html" class="social">Disclaimer</a>
+      <a href="legal/terms.html" class="social">Terms</a>
+      <a href="legal/privacy.html" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
@@ -124,7 +124,7 @@
 <script>
   window.fpCookiesConfig = { policyUrl: '../legal/privacy.html', ttlDays: 180 };
 </script>
-<script src="/js/cookies.js"></script>
+<script src="js/cookies.js"></script>
 
 <script>
   // Fallback: set footer year if not already handled globally
