Fix: update relative paths in trading-options.html

--- a/options/trading-options.html
+++ b/options/trading-options.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Options Made Simple</title>
-    <link rel="stylesheet" href="css/options.css">
+    <link rel="stylesheet" href="../css/options.css">
   <script>
     if (localStorage.getItem('darkMode') === 'true') {
       document.documentElement.classList.add('dark');
@@ -42,7 +42,7 @@
 <body>
 
   <div class="nav-bar">
-    <a href="index.html" class="nav-button">Homepage</a>
+    <a href="../index.html" class="nav-button">Homepage</a>
   </div>
 
   <!-- Dark/Light Mode Toggle Button -->
