--- a/options/trading-options.html
+++ b/options/trading-options.html
@@ -106,25 +106,25 @@
     </section>
   </div>
 
-  <script src="../js/darkmode.js"></script>
+  <script src="../js/darkmode.js?v=20250819-1"></script>
   
 
  <footer class="site-footer">
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="../disclaimer.html" class="social">Disclaimer</a>
-      <a href="../legal/terms.html" class="social">Terms</a>
-      <a href="../legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="../disclaimer.html?v=20250819-1" class="social">Disclaimer</a>
+      <a href="../legal/terms.html?v=20250819-1" class="social">Terms</a>
+      <a href="../legal/privacy.html?v=20250819-1" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
 </footer>
 
 <script>
-  window.fpCookiesConfig = { policyUrl: '../legal/privacy.html', ttlDays: 180 };
+  window.fpCookiesConfig = { policyUrl: '../legal/privacy.html?v=20250819-1', ttlDays: 180 };
 </script>
-<script src="../js/cookies.js"></script>
+<script src="../js/cookies.js?v=20250819-1"></script>
 
 <script>
   // Fallback: set footer year if not already handled globally
