--- a/options/basic-terms/greeks.html
+++ b/options/basic-terms/greeks.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Greeks</title>
-  <link rel="stylesheet" href="/css/options.css" />
+  <link rel="stylesheet" href="../../css/options.css?v=20250819-7" />
 
   <!-- Meta Description (SEO) -->
   <meta name="description" content="Financial Pulse: Options: Basic Terms - Greeks, Theta, Delta, Gamma">
@@ -42,7 +42,7 @@
 
 <body>
   <div>
-    <a href="/options/trading-options.html" class="nav-button">Home - Options</a>
+    <a href="../../options/trading-options.html?v=20250819-7" class="nav-button">Home - Options</a>
   </div>
 
   <section class="vs-section">
@@ -95,22 +95,22 @@
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="/disclaimer.html" class="social">Disclaimer</a>
-      <a href="/legal/terms.html" class="social">Terms</a>
-      <a href="/legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="../../disclaimer.html?v=20250819-7" class="social">Disclaimer</a>
+      <a href="../../legal/terms.html?v=20250819-7" class="social">Terms</a>
+      <a href="../../legal/privacy.html?v=20250819-7" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
 </footer>
 
 <script>
-  window.fpCookiesConfig = { policyUrl: '../legal/privacy.html', ttlDays: 180 };
+  window.fpCookiesConfig = { policyUrl: '../../legal/privacy.html?v=20250819-7', ttlDays: 180 };
 </script>
-<script src="/js/cookies.js"></script>
+<script src="../../js/cookies.js?v=20250819-7"></script>
 
-<script src="js/darkmode.js"></script>
-<script src="/js/quiz.js"></script>
-<script src="/js/year.js" defer></script>
-<script src="/js/cookies.js"></script>
+<script src="../../js/darkmode.js?v=20250819-7"></script>
+<script src="../../js/quiz.js?v=20250819-7"></script>
+<script src="../../js/year.js?v=20250819-7" defer></script>
+<script src="../../js/cookies.js?v=20250819-7"></script>
 </body>
 </html>
