Fix: update CSS path in leaps.html

--- a/options/option-strategies/vertical-spreads.html
+++ b/options/option-strategies/vertical-spreads.html
@@ -8,7 +8,7 @@
   </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/options.css" />
+  <link rel="stylesheet" href="../../css/options.css?v=20250819-16" />
   <title>Vertical Options Strategies</title>
 
    <!-- Meta Description (SEO) -->
@@ -38,7 +38,7 @@
 <body>
 
   <div class="nav-bar">
-    <a href="/options/trading-options.html" class="nav-button">Home - Options</a>
+    <a href="../../options/trading-options.html?v=20250819-16" class="nav-button">Home - Options</a>
   </div>
 
   <main class="site-main" id="vs-main">
@@ -60,7 +60,7 @@
   <section id="bull-call" class="vs-section" tabindex="-1">
     <h3>Bull Call Spread</h3>
     <div class="image-container">
-      <img src="/assets/img/bull-call-spread-payoff.png" alt="Bull-call-spread payoff Diagram" />
+      <img src="../../assets/img/bull-call-spread-payoff.png?v=20250819-16" alt="Bull-call-spread payoff Diagram" />
       <p class="caption">Custom payoff diagram of a Bull-call-spread strategy</p>
     </div>
 
@@ -110,7 +110,7 @@
   <section id="bear-put" class="vs-section" tabindex="-1">
     <h3>Bear Put Spread</h3>
     <div class="image-container">
-      <img src="/assets/img/bear-put-spread-payoff.png" alt="Bear-put-spread payoff Diagram" />
+      <img src="../../assets/img/bear-put-spread-payoff.png?v=20250819-16" alt="Bear-put-spread payoff Diagram" />
       <p class="caption">Custom payoff diagram of a Bear-put-spread strategy</p>
     </div>
 
@@ -160,7 +160,7 @@
   <section id="bull-put" class="vs-section" tabindex="-1">
     <h3>Bull Put Spread</h3>
     <div class="image-container">
-      <img src="/assets/img/bull-put-spread-payoff.png" alt="Bull-put-spread payoff Diagram" />
+      <img src="../../assets/img/bull-put-spread-payoff.png?v=20250819-16" alt="Bull-put-spread payoff Diagram" />
       <p class="caption">Custom payoff diagram of a Bull-put-spread strategy</p>
     </div>
 
@@ -210,7 +210,7 @@
   <section id="bear-call" class="vs-section" tabindex="-1">
     <h3>Bear Call Spread</h3>
     <div class="image-container">
-      <img src="/assets/img/bear-call-spread-payoff.png" alt="Bear-call-spread payoff Diagram" />
+      <img src="../../assets/img/bear-call-spread-payoff.png?v=20250819-16" alt="Bear-call-spread payoff Diagram" />
       <p class="caption">Custom payoff diagram of a Bear-call-spread strategy</p>
     </div>
 
@@ -262,23 +262,23 @@
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="/disclaimer.html" class="social">Disclaimer</a>
-      <a href="/legal/terms.html" class="social">Terms</a>
-      <a href="/legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="../../disclaimer.html?v=20250819-16" class="social">Disclaimer</a>
+      <a href="../../legal/terms.html?v=20250819-16" class="social">Terms</a>
+      <a href="../../legal/privacy.html?v=20250819-16" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
 </footer>
 
 <script>
-  window.fpCookiesConfig = { policyUrl: '../legal/privacy.html', ttlDays: 180 };
+  window.fpCookiesConfig = { policyUrl: '../../legal/privacy.html?v=20250819-16', ttlDays: 180 };
 </script>
-<script src="/js/cookies.js"></script>
+<script src="../../js/cookies.js?v=20250819-16"></script>
 
-<script src="js/darkmode.js"></script>
-<script src="/js/quiz.js"></script>
-<script src="/js/year.js" defer></script>
-<script src="/js/cookies.js"></script>
+<script src="../..js/darkmode.js?v=20250819-16"></script>
+<script src="../../js/quiz.js?v=20250819-16"></script>
+<script src="../../js/year.js?v=20250819-16" defer></script>
+<script src="../../js/cookies.js?v=20250819-16"></script>
 
 </body>
 </html>
