--- a/options/call-and-put-option-basics/type-of-options.html
+++ b/options/call-and-put-option-basics/type-of-options.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Call & Put Options</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/options.css" />
+  <link rel="stylesheet" href="../../css/options.css?v=20250819-17" />
   <script>
     if (localStorage.getItem('darkMode') === 'true') {
       document.documentElement.classList.add('dark');
@@ -38,7 +38,7 @@
 
 <body>
 
-  <a href="/options/trading-options.html" class="nav-button">Home - Options</a>
+  <a href="../../options/trading-options.html?v=20250819-17" class="nav-button">Home - Options</a>
 
   <section class="vs-section">
     <h2>Types of Options</h2>
@@ -51,14 +51,14 @@
 
     <p>
       You may wonder — why not just buy the stock? 
-      <a href="call-vs-stock-buying.html" class="styled-link">[See More]</a>
+      <a href="../../call-and-put-option-basics/call-vs-stock-buying.html?v=20250819-17" class="styled-link">[See More]</a>
     </p>
 
     <p>
       Selling a call means you expect the stock to remain flat or fall. You collect a premium from the buyer. 
       If the stock rises too much, you risk having to sell it at a lower strike price.
       This strategy is commonly used in a 
-      <a href="../option-strategies/covered-call.html" class="styled-link">[Covered Call]</a>.
+      <a href="../../option-strategies/covered-call.html?v=20250819-17" class="styled-link">[Covered Call]</a>.
     </p>
 
     <h3>Put Option</h3>
@@ -69,7 +69,7 @@
 
     <p>
       You may ask — why not just short the stock? Good question. 
-      <a href="put-buying-vs-shorting.html" class="styled-link">[Compare Here]</a>
+      <a href="../../call-and-put-option-basics/put-buying-vs-shorting.html?v=20250819-17" class="styled-link">[Compare Here]</a>
     </p>
 
     <p>
@@ -94,23 +94,23 @@
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="/disclaimer.html" class="social">Disclaimer</a>
-      <a href="/legal/terms.html" class="social">Terms</a>
-      <a href="/legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="../../disclaimer.html?v=20250819-17" class="social">Disclaimer</a>
+      <a href="../../legal/terms.html?v=20250819-17" class="social">Terms</a>
+      <a href="../../legal/privacy.html?v=20250819-17" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
 </footer>
 
 <script>
-  window.fpCookiesConfig = { policyUrl: '../legal/privacy.html', ttlDays: 180 };
+  window.fpCookiesConfig = { policyUrl: '../../legal/privacy.html?v=20250819-17', ttlDays: 180 };
 </script>
-<script src="/js/cookies.js"></script>
+<script src="../../js/cookies.js?v=20250819-17"></script>
 
-<script src="js/darkmode.js"></script>
-<script src="/js/quiz.js"></script>
-<script src="/js/year.js" defer></script>
-<script src="/js/cookies.js"></script>
+<script src="../../js/darkmode.js?v=20250819-17"></script>
+<script src="../../js/quiz.js?v=20250819-17"></script>
+<script src="../../js/year.js?v=20250819-17" defer></script>
+<script src="../../js/cookies.js?v=20250819-17"></script>
 </body>
 </html>
 
