--- a/options/call-and-put-option-basics/type-of-options.html
+++ b/options/call-and-put-option-basics/type-of-options.html
@@ -58,7 +58,7 @@
       Selling a call means you expect the stock to remain flat or fall. You collect a premium from the buyer. 
       If the stock rises too much, you risk having to sell it at a lower strike price.
       This strategy is commonly used in a 
-      <a href="../../option-strategies/covered-call.html?v=20250819-17" class="styled-link">[Covered Call]</a>.
+      <a href="../option-strategies/covered-call.html?v=20250819-19" class="styled-link">[Covered Call]</a>.
     </p>
 
     <h3>Put Option</h3>
@@ -69,7 +69,7 @@
 
     <p>
       You may ask — why not just short the stock? Good question. 
-      <a href="../../call-and-put-option-basics/put-buying-vs-shorting.html?v=20250819-17" class="styled-link">[Compare Here]</a>
+      <a href="./call-and-put-option-basics/put-buying-vs-shorting.html?v=20250819-19" class="styled-link">[Compare Here]</a>
     </p>
 
     <p>
