--- a/options/call-and-put-option-basics/type-of-options.html
+++ b/options/call-and-put-option-basics/type-of-options.html
@@ -51,7 +51,7 @@
 
     <p>
       You may wonder — why not just buy the stock? 
-      <a href="./call-vs-stock-buying.html?v=20250819-30" class="styled-link">[See More]</a>
+      <a href="call-vs-stock-buying.html?v=20250819-30" class="styled-link">[See More]</a>
     </p>
 
     <p>
