Fix: correct links (options-strategies path + dot typo)

--- a/options/call-and-put-option-basics/type-of-options.html
+++ b/options/call-and-put-option-basics/type-of-options.html
@@ -51,14 +51,14 @@
 
     <p>
       You may wonder — why not just buy the stock? 
-     <a href="./call-vs-stock-buying.html?v=20250819-31" class="styled-link">[See More]</a>
+     <a href="./call-vs-stock-buying.html?v=20250819-32" class="styled-link">[See More]</a>
     </p>
 
     <p>
       Selling a call means you expect the stock to remain flat or fall. You collect a premium from the buyer. 
       If the stock rises too much, you risk having to sell it at a lower strike price.
       This strategy is commonly used in a 
-      <a href="../options/option-strategies/covered-call.html?v=20250819-22" class="styled-link">[Covered Call]</a>.
+      <a href="../option-strategies/covered-call.html?v=20250819-32" class="styled-link">[Covered Call]</a>.
     </p>
 
     <h3>Put Option</h3>
@@ -69,7 +69,7 @@
 
     <p>
       You may ask — why not just short the stock? Good question. 
-      <a href="./options/call-and-put-option-basics/put-buying-vs-shorting.html?v=20250819-22" class="styled-link">[Compare Here]</a>
+      <a href="./put-buying-vs-shorting.html?v=20250819-32" class="styled-link">[Compare Here]</a>
     </p>
 
     <p>
