--- a/options/call-and-put-option-basics/call-vs-stock-buying.html
+++ b/options/call-and-put-option-basics/call-vs-stock-buying.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Call Option vs. Stock</title>
-  <link rel="stylesheet" href="..../css/options.css?v=20250819-33" />
+  <link rel="stylesheet" href="../../css/options.css?v=20250819-33" />
 
    <!-- Meta Description (SEO) -->
   <meta name="description" content="Financial Pulse: Options: Call options or buying stock?">
