Fix: update CSS path in type-of-options.html

--- a/options/call-and-put-option-basics/call-vs-stock-buying.html
+++ b/options/call-and-put-option-basics/call-vs-stock-buying.html
@@ -36,8 +36,8 @@
   <link rel="icon" href="https://financialpulse24.com/assets/faviconFP.svg" type="image/svg+xml">
 </head>
 <body>
-  <a href="./options/trading-options.html?v=20250819-33" class="nav-button">Home - Options</a>
-  <a href="../../options/call-and-put-option-basics/type-of-options.html?v=20250819-33" class="nav-button">Previous</a>
+  <a href="../trading-options.html?v=20250819-33" class="nav-button">Home - Options</a>
+  <a href="./type-of-options.html?v=20250819-33" class="nav-button">Previous</a>
 
   <section class="vs-section">
     <h2>Buying a Call Option vs. Buying a Stock</h2>
