--- a/options/call-and-put-option-basics/put-buying-vs-shorting.html
+++ b/options/call-and-put-option-basics/put-buying-vs-shorting.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Put Option vs. Shorting a Stock</title>
-  <link rel="stylesheet" href="/css/options.css" />
+  <link rel="stylesheet" href="../../css/options.css" />
 
    <!-- Meta Description (SEO) -->
   <meta name="description" content="Financial Pulse: Options: Buying put option or shorting a stock?">
@@ -38,8 +38,8 @@
 <body>
 
   <nav>
-    <a href="/options/trading-options.html" class="nav-button">Home - Options</a>
-    <a href="/options/call-and-put-option-basics/type-of-options.html" class="nav-button">Previous</a>
+    <a href="../trading-options.html" class="nav-button">Home - Options</a>
+    <a href="./type-of-options.html" class="nav-button">Previous</a>
   </nav>
 
   <section class="vs-section">
@@ -114,29 +114,29 @@
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="/disclaimer.html" class="social">Disclaimer</a>
-      <a href="/legal/terms.html" class="social">Terms</a>
-      <a href="/legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="../../disclaimer.html" class="social">Disclaimer</a>
+      <a href="../../legal/terms.html" class="social">Terms</a>
+      <a href="../../legal/privacy.html" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
   </footer>
 
  <script>
-  window.fpCookiesConfig = { policyUrl: '../legal/privacy.html', ttlDays: 180 };
+  window.fpCookiesConfig = { policyUrl: '../../legal/privacy.html', ttlDays: 180 };
  </script>
- <script src="/js/cookies.js"></script>
+ <script src="../../js/cookies.js"></script>
 
-  <script src="js/darkmode.js"></script>
-  <script src="/js/quiz.js"></script>
-  <script src="/js/year.js" defer></script>
-  <script src="/js/cookies.js"></script>
+  <script src="../../js/darkmode.js"></script>
+  <script src="../../js/quiz.js"></script>
+  <script src="../../js/year.js" defer></script>
+  <script src="../../js/cookies.js"></script>
 </body>
 </html>
 
 
-<script src="/js/darkmode.js"></script>
-<script src="/js/year.js" defer></script>
+<script src="../../js/darkmode.js"></script>
+<script src="../../js/year.js" defer></script>
 </body>
 </html>
 
