Fix: update CSS path in put-buying-vs-shorting.html

--- a/options/call-and-put-option-basics/put-buying-vs-shorting.html
+++ b/options/call-and-put-option-basics/put-buying-vs-shorting.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Put Option vs. Shorting a Stock</title>
-  <link rel="stylesheet" href="../../css/options.css" />
+  <link rel="stylesheet" href="../../css/options.css?v=20250819-50" />
 
    <!-- Meta Description (SEO) -->
   <meta name="description" content="Financial Pulse: Options: Buying put option or shorting a stock?">
