Fix: update CSS path in put-buying-vs-shorting.html

--- a/options/call-and-put-option-basics/put-buying-vs-shorting.html
+++ b/options/call-and-put-option-basics/put-buying-vs-shorting.html
@@ -38,8 +38,8 @@
 <body>
 
   <nav>
-    <a href="../trading-options.html" class="nav-button">Home - Options</a>
-    <a href="./type-of-options.html" class="nav-button">Previous</a>
+    <a href="../trading-options.html?v=20250819-50" class="nav-button">Home - Options</a>
+    <a href="./type-of-options.html?v=20250819-50" class="nav-button">Previous</a>
   </nav>
 
   <section class="vs-section">
@@ -114,29 +114,29 @@
   <div class="container footer-inner">
     <p class="muted tiny">© <span id="year"></span> Financial Pulse. All rights reserved.</p>
     <div class="socials">
-      <a href="../../disclaimer.html" class="social">Disclaimer</a>
-      <a href="../../legal/terms.html" class="social">Terms</a>
-      <a href="../../legal/privacy.html" class="social">Privacy &amp; Cookies</a>
+      <a href="../../disclaimer.html?v=20250819-50" class="social">Disclaimer</a>
+      <a href="../../legal/terms.html?v=20250819-50" class="social">Terms</a>
+      <a href="../../legal/privacy.html?v=20250819-50" class="social">Privacy &amp; Cookies</a>
       <a href="#" class="social" onclick="window.fpCookies?.open();return false;">Manage cookies</a>
     </div>
   </div>
   </footer>
 
  <script>
-  window.fpCookiesConfig = { policyUrl: '../../legal/privacy.html', ttlDays: 180 };
+  window.fpCookiesConfig = { policyUrl: '../../legal/privacy.html?v=20250819-50', ttlDays: 180 };
  </script>
- <script src="../../js/cookies.js"></script>
+ <script src="../../js/cookies.js?v=20250819-50"></script>
 
-  <script src="../../js/darkmode.js"></script>
-  <script src="../../js/quiz.js"></script>
-  <script src="../../js/year.js" defer></script>
-  <script src="../../js/cookies.js"></script>
+  <script src="../../js/darkmode.js?v=20250819-50"></script>
+  <script src="../../js/quiz.js?v=20250819-50"></script>
+  <script src="../../js/year.js?v=20250819-50" defer></script>
+  <script src="../../js/cookies.js?v=20250819-50"></script>
 </body>
 </html>
 
 
-<script src="../../js/darkmode.js"></script>
-<script src="../../js/year.js" defer></script>
+<script src="../../js/darkmode.js?v=20250819-50"></script>
+<script src="../../js/year.js?v=20250819-50" defer></script>
 </body>
 </html>
 
