Added favicon.ico + updated head with SEO and favicons

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.financialpulse24.com/">
   <meta property="og:site_name" content="Financial Pulse">
-  <meta property="og:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.jpg">
+  <meta property="og:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.png">
   <meta property="og:locale" content="en_US">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Financial Pulse">
   <meta name="twitter:description" content="Fresh market insights on stocks & crypto, options education, and more.">
-  <meta name="twitter:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.jpg">
+  <meta name="twitter:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.png">
 
   <!-- Favicons -->
   <!-- Root favicon.ico (najbitnije za kompatibilnost) -->
