--- a/options/basic-terms/intrinsic.html
+++ b/options/basic-terms/intrinsic.html
@@ -10,29 +10,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intrinsic Value</title>
   <link rel="stylesheet" href="../../css/options.css?v=20250819-8" />
+<!-- Canonical (SEO) -->
+  <link rel="canonical" href="https://www.financialpulse24.com/">
+
   <!-- Meta Description (SEO) -->
-  <meta name="description" content="Financial Pulse: Options: Basic Terms - Intrinsic value">
+  <meta name="description" content="Options: Basic Terms – Intrinsic value.">
 
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Financial Pulse">
-  <meta property="og:description" content="Option education, basic terms, Intrinsic value">
+  <meta property="og:description" content="Option education, basic terms, intrinsic value.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://financialpulse24.com">
+  <meta property="og:url" content="https://www.financialpulse24.com/">
   <meta property="og:site_name" content="Financial Pulse">
-  <meta property="og:image" content="https://financialpulse24.com/assets/og-image-financial-pulse-full.jpg">
+  <meta property="og:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.png">
   <meta property="og:locale" content="en_US">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Financial Pulse">
-  <meta name="twitter:description" content="Option education, basic terms, Intrinsic value">
-  <meta name="twitter:image" content="https://financialpulse24.com/assets/og-image-financial-pulse-full.jpg">
+  <meta name="twitter:description" content="Option education, basic terms, intrinsic value.">
+  <meta name="twitter:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.png">
 
   <!-- Favicons -->
-  <link rel="icon" href="https://financialpulse24.com/assets/faviconFP-32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="https://financialpulse24.com/assets/faviconFP-48.png" sizes="48x48" type="image/png">
-  <link rel="apple-touch-icon" href="https://financialpulse24.com/assets/apple-touch-icon-180.png" sizes="180x180">
-  <link rel="icon" href="https://financialpulse24.com/assets/faviconFP.svg" type="image/svg+xml">
+  <!-- Root favicon.ico (najbitnije za kompatibilnost) -->
+  <link rel="shortcut icon" href="/favicon.ico?v=3">
+
+  <!-- PNG varijante (iz assets foldera) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/faviconFP-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="48x48" href="/assets/faviconFP-48.png?v=3">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon-180.png?v=3">
+
+  <!-- SVG (opcionalno, moderni browseri) -->
+  <link rel="icon" href="/assets/faviconFP.svg?v=3" type="image/svg+xml">
+
+  <!-- (Opcionalno) Safari pinned tab -->
+  <!-- <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#39d98a"> -->
 
   <!-- Theme Color for Mobile Browsers -->
   <meta name="theme-color" content="#121212">
