Added favicon.ico + updated head with SEO and favicons

--- a/options/basic-terms/intrinsic.html
+++ b/options/basic-terms/intrinsic.html
@@ -14,7 +14,7 @@
   <link rel="canonical" href="https://www.financialpulse24.com/">
 
   <!-- Meta Description (SEO) -->
-  <meta name="description" content="Options: Basic Terms – Intrinsic value.">
+  <meta name="description" content="Options: Basic Terms - Intrinsic value.">
 
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Financial Pulse">
