Added favicon.ico + updated head with SEO and favicons

--- a/options/option-strategies/cash-secured-put.html
+++ b/options/option-strategies/cash-secured-put.html
@@ -11,29 +11,41 @@
   <title>Cash-Secured Put</title>
   <link rel="stylesheet" href="../../css/options.css?v=20250819-13" />
 
-   <!-- Meta Description (SEO) -->
-  <meta name="description" content="Financial Pulse: Option strategies: Selling a put, cash secured">
+  <!-- Canonical (SEO) -->
+  <link rel="canonical" href="https://www.financialpulse24.com/">
+
+  <!-- Meta Description (SEO) -->
+  <meta name="description" content="Options strategies: Selling a cash secured put.">
 
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Financial Pulse">
-  <meta property="og:description" content="Option education, strategies, selling a cash secured put">
+  <meta property="og:description" content="Options, strategies, selling,  cash, secured, put, option.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://financialpulse24.com">
+  <meta property="og:url" content="https://www.financialpulse24.com/">
   <meta property="og:site_name" content="Financial Pulse">
-  <meta property="og:image" content="https://financialpulse24.com/assets/og-image-financial-pulse-full.jpg">
+  <meta property="og:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.png">
   <meta property="og:locale" content="en_US">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Financial Pulse">
-  <meta name="twitter:description" content="Option education, strategies, selling a cash secured put">
-  <meta name="twitter:image" content="https://financialpulse24.com/assets/og-image-financial-pulse-full.jpg">
+  <meta name="twitter:description" content="Options, strategies, selling,  cash, secured, put, option.">
+  <meta name="twitter:image" content="https://www.financialpulse24.com/assets/og-image-financial-pulse-full.png">
 
   <!-- Favicons -->
-  <link rel="icon" href="https://financialpulse24.com/assets/faviconFP-32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="https://financialpulse24.com/assets/faviconFP-48.png" sizes="48x48" type="image/png">
-  <link rel="apple-touch-icon" href="https://financialpulse24.com/assets/apple-touch-icon-180.png" sizes="180x180">
-  <link rel="icon" href="https://financialpulse24.com/assets/faviconFP.svg" type="image/svg+xml">
+  <!-- Root favicon.ico (najbitnije za kompatibilnost) -->
+  <link rel="shortcut icon" href="/favicon.ico?v=3">
+
+  <!-- PNG varijante (iz assets foldera) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/faviconFP-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="48x48" href="/assets/faviconFP-48.png?v=3">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon-180.png?v=3">
+
+  <!-- SVG (opcionalno, moderni browseri) -->
+  <link rel="icon" href="/assets/faviconFP.svg?v=3" type="image/svg+xml">
+
+  <!-- (Opcionalno) Safari pinned tab -->
+  <!-- <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#39d98a"> -->
 </head>
 <body>
 
