--- a/index.html
+++ b/index.html
@@ -202,24 +202,32 @@
           <h2>Contact</h2>
         </div>
 
-        <form class="contact-form" id="contactForm" method="POST" action="">
-          <div class="grid form-grid">
-            <label>
-              <span>Name</span>
-              <input type="text" name="name" placeholder="Your name" required />
-            </label>
-            <label>
-              <span>Email</span>
-              <input type="email" name="email" placeholder="your@email.com" required />
-            </label>
-          </div>
-          <label>
-            <span>Message</span>
-            <textarea name="message" rows="6" placeholder="How can I help?" required></textarea>
-          </label>
-          <button class="btn-primary" type="submit">Send</button>
-          <p class="muted tiny" id="formMsg" role="status" aria-live="polite"></p>
-        </form>
+        <form class="contact-form" id="contactForm" name="contact"
+      method="POST" data-netlify="true" netlify-honeypot="bot-field">
+  <!-- obavezno hidden polje: ime forme -->
+  <input type="hidden" name="form-name" value="contact">
+  <!-- honeypot protiv spama (skriveno) -->
+  <p class="hidden" aria-hidden="true" style="position:absolute;left:-9999px;">
+    <label>Don’t fill this out: <input name="bot-field"></label>
+  </p>
+
+  <div class="grid form-grid">
+    <label>
+      <span>Name</span>
+      <input type="text" name="name" placeholder="Your name" required />
+    </label>
+    <label>
+      <span>Email</span>
+      <input type="email" name="email" placeholder="your@email.com" required />
+    </label>
+  </div>
+  <label>
+    <span>Message</span>
+    <textarea name="message" rows="6" placeholder="How can I help?" required></textarea>
+  </label>
+  <button class="btn-primary" type="submit">Send</button>
+  <p class="muted tiny" id="formMsg" role="status" aria-live="polite"></p>
+</form>
       </div>
     </section>
   </main>
