Fix Netlify forms: action + form data

--- a/index.html
+++ b/index.html
@@ -202,12 +202,10 @@
           <h2>Contact</h2>
         </div>
 
-        <form class="contact-form" id="contactForm" name="contact"
-      method="POST" data-netlify="true" netlify-honeypot="bot-field">
-  <!-- obavezno hidden polje: ime forme -->
+       <form class="contact-form" id="contactForm" name="contact"
+      method="POST" action="/" data-netlify="true" netlify-honeypot="bot-field">
   <input type="hidden" name="form-name" value="contact">
-  <!-- honeypot protiv spama (skriveno) -->
-  <p class="hidden" aria-hidden="true" style="position:absolute;left:-9999px;">
+  <p aria-hidden="true" style="position:absolute;left:-9999px;">
     <label>Don’t fill this out: <input name="bot-field"></label>
   </p>
 
