Netlify fix forms

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
         </div>
 
        <form class="contact-form" id="contactForm" name="contact"
-      method="POST" action="/" data-netlify="true" netlify-honeypot="bot-field">
+      method="POST" action="/thanks.html"
+      data-netlify="true" netlify-honeypot="bot-field">
   <input type="hidden" name="form-name" value="contact">
   <p aria-hidden="true" style="position:absolute;left:-9999px;">
     <label>Don’t fill this out: <input name="bot-field"></label>
