Changes in thanks.html

--- a/thanks.html
+++ b/thanks.html
@@ -14,7 +14,7 @@
   <div class="wrap">
     <div>
       <h1>Thanks!</h1>
-      <p>Your message has been sent. I’ll get back to you shortly.</p>
+      <p>Your message has been sent. I’ll get back to you shortly. Don't forget to check other folders, and remember you can also contact me via. X (ex. Twitter) socials.</p>
       <p><a href="/">Back to home</a></p>
     </div>
   </div>
