Home: set robots to index,follow

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <!-- Meta Description (SEO) -->
   <meta name="description" content="Financial Pulse: market insights on stocks & crypto, options trading education, and investment strategies.">
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
+  <meta name="googlebot" content="index,follow">
+
 
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Financial Pulse">
