Fix index in intro.html

--- a/intro.html
+++ b/intro.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="hr">
 <head>
-  <meta name="robots" content="noindex,follow">
-  <link rel="canonical" href="index.html">
+  <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
+<meta name="googlebot" content="index,follow">
   <noscript><meta http-equiv="refresh" content="0;url=/index.html"></noscript>
 
 
